Added automagic translation and some content to spanish

--- a/en/DiscriminatedUnions.ipynb
+++ b/en/DiscriminatedUnions.ipynb
@@ -773,6 +773,17 @@
        "frontend"
       ],
       "name": "vscode"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
      }
     ]
    }
