Working with markdown translation

--- a/en/DiscriminatedUnions.ipynb
+++ b/en/DiscriminatedUnions.ipynb
@@ -702,9 +702,7 @@
      "kernelName": "csharp"
     }
    },
-   "source": [
-    "Next, [records]({% post_url 2023-01-25-records. %})."
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -727,6 +725,7 @@
      },
      {
       "aliases": [],
+      "languageName": null,
       "name": ".NET"
      },
      {
@@ -772,6 +771,7 @@
       "aliases": [
        "frontend"
       ],
+      "languageName": null,
       "name": "vscode"
      },
      {
