--- a/en/Functions.ipynb
+++ b/en/Functions.ipynb
@@ -486,6 +486,7 @@
       "aliases": [
        "frontend"
       ],
+      "languageName": null,
       "name": "vscode"
      },
      {
@@ -516,6 +517,17 @@
      {
       "aliases": [],
       "name": "value"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
      }
     ]
    }
