--- a/en/Fundamentals.ipynb
+++ b/en/Fundamentals.ipynb
@@ -11,7 +11,7 @@
    "source": [
     "## Fundamentals\n",
     "\n",
-    "\n",
+    "These guides are oriented to those progammers interested in learning some concepts on F\\# functional programming, from a practical perspective.\n",
     "\n",
     "### In preparation for take off\n",
     "\n",
@@ -331,6 +331,13 @@
       "aliases": [],
       "languageName": "Mermaid",
       "name": "mermaid"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "languageName": null,
+      "name": "vscode"
      }
     ]
    }
