--- a/en/IntroToTypes.ipynb
+++ b/en/IntroToTypes.ipynb
@@ -12,9 +12,11 @@
     }
    },
    "source": [
+    "## Thinking with types\n",
+    "\n",
     "To completely define a function, you not only need to establish its behavior, but also its inputs and outputs. That is what _types_ are for! \n",
     "\n",
-    "## Thinking with types\n",
+    "## Types in the real world\n",
     "\n",
     "We have covered the basics of functions in F\\#, and defined some properties that difference them from routines or procedures in other languages. We have also seen how one can combine functions together. That is the first aspect about defining functions: how they behave, and how one can encapsulate this behavior in one or several functions that can be composed to generate results. In our example, the behavior of our `vendingMachine` is to give you some product once you provided enough money and selected your treat with a keyboard. \n",
     "The second aspect that is _needed_ to define the function is what sort of inputs and outputs it has. Going back to our first example, one had a table that represented the function `carColor`, with the color of each car in parked in a block. A completely different function would be `carHorsePower`, where for each car in the block, you write down the horsepower. Clearly here the inputs of both functions are the same, the license plate, but the outputs are different. If our vending machine does not take paper bills but credit cards, the input will be different, but you still get your beloved chips, that is, the outputs of `vendingMachine` and the modern `vendingMachineWithCreditCard` are of the same kind, but the inputs are different.\n",
@@ -446,10 +448,12 @@
       "aliases": [
        "frontend"
       ],
+      "languageName": null,
       "name": "vscode"
      },
      {
       "aliases": [],
+      "languageName": null,
       "name": ".NET"
      },
      {
@@ -490,6 +494,17 @@
      {
       "aliases": [],
       "name": "value"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
      }
     ]
    }
