--- a/en/Records.ipynb
+++ b/en/Records.ipynb
@@ -12,9 +12,9 @@
     }
    },
    "source": [
-    "Dealing with entities that do not belong to well predefined group of cases.\n",
+    "## Records\n",
     "\n",
-    "# Records\n",
+    "Dealing with entities that do not belong to well predefined group of cases.\n",
     "\n",
     "We presented before the need to aggregate useful information of some entities that cannot be restricted to have some specific types, for example, the data of a credit card. \n",
     "\n",
