--- a/en/TypeExercises.ipynb
+++ b/en/TypeExercises.ipynb
@@ -14,6 +14,8 @@
    "source": [
     "## F\\# types exercises\n",
     "\n",
+    "Some gentle exercises to start working with domains.\n",
+    "\n",
     "### Coins\n",
     "\n",
     "At some point, a customer will enter some amount of each coin to buy a product in the food vending machine. The machine receives coins of $\\$$0.1, $\\$$0.25 and $\\$$0.5 value only. \n",
@@ -96,10 +98,12 @@
       "aliases": [
        "frontend"
       ],
+      "languageName": null,
       "name": "vscode"
      },
      {
       "aliases": [],
+      "languageName": null,
       "name": ".NET"
      },
      {
