Added template to have a code fenced by fsharp

--- a/en/Records.ipynb
+++ b/en/Records.ipynb
@@ -510,6 +510,24 @@
       ],
       "languageName": null,
       "name": "vscode"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
+     },
+     {
+      "aliases": [
+       "powershell"
+      ],
+      "languageName": "PowerShell",
+      "name": "pwsh"
      }
     ]
    }
