Added solutions of exercises

--- a/en/DiscriminatedUnions.ipynb
+++ b/en/DiscriminatedUnions.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -138,7 +138,15 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The price of speaker is: 29 $\n"
+     ]
+    }
+   ],
    "source": [
     "let price electronic = \n",
     "    match electronic with \n",
@@ -172,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -181,7 +189,17 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chocolate: 2.35 $\n",
+      "Chips: 1.5 $\n",
+      "Candy: 1.5 $\n"
+     ]
+    }
+   ],
    "source": [
     "let priceFood food = \n",
     "    match food with \n",
@@ -210,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -219,7 +237,17 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chocolate: 1.5 $\n",
+      "Chips: 1.5 $\n",
+      "Candy: 1.5 $\n"
+     ]
+    }
+   ],
    "source": [
     "let priceSale food = \n",
     "    match food with \n",
@@ -247,7 +275,9 @@
     "\n",
     "Here again, the compiler behind scenes comes to our rescue. It will let you know that some of the pattern matching rules will not be reached:\n",
     "\n",
-    "![This will save you from bankruptcy](../figures/rule_will_never_match.png)\n"
+    "<img src=\"../img/rule_will_never_match.png\" alt=\"This will save you from bankruptcy\" width=\"400\"/>\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -269,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -303,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -336,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -369,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -402,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -422,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -431,7 +461,15 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Brand of belovedChocolate: Wonka\n"
+     ]
+    }
+   ],
    "source": [
     "printfn \"Brand of belovedChocolate: %s\" (brand belovedChocolate)"
    ]
@@ -455,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -464,7 +502,15 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are receiving 3.0 $ as change\n"
+     ]
+    }
+   ],
    "source": [
     "let changeValue change =\n",
     "    match change with \n",
@@ -511,13 +557,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "dotnet_interactive": {
-     "language": "csharp"
+     "language": "fsharp"
     },
     "polyglot_notebook": {
-     "kernelName": "csharp"
+     "kernelName": "fsharp"
     },
     "vscode": {
      "languageId": "polyglot-notebook"
@@ -526,7 +572,7 @@
    "outputs": [],
    "source": [
     "type Model =\n",
-    "| Model of string "
+    "    | Model of string"
    ]
   },
   {
@@ -546,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -581,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -593,7 +639,15 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The model of the yPhone is \"Xtreme 3S\"\n"
+     ]
+    }
+   ],
    "source": [
     "let (Model yPhoneModel) = yPhone\n",
     "printfn \"The model of the yPhone is %A\" yPhoneModel"
@@ -616,28 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "let printModel (model: Model) =\n",
-    "    let (Model value) = model \n",
-    "    printfn \"The model value is %A\" model "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -650,6 +683,36 @@
     }
    },
    "outputs": [],
+   "source": [
+    "let printModel (model: Model) =\n",
+    "    let (Model value) = model \n",
+    "    printfn \"The model is %A\" value "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "fsharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The model is \"Xtreme 3S\"\n",
+      "The model is \"Louder Pro\"\n"
+     ]
+    }
+   ],
    "source": [
     "printModel yPhone\n",
     "printModel miniSpeakers"
