--- a/en/IntroToTypes.ipynb
+++ b/en/IntroToTypes.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -137,7 +137,7 @@
     "\n",
     "That box contains the type of the value `a` that has been _inferred_ by the compiler. Yes, when you code in a F\\# supported IDE, there will be an F\\# compiler digesting your code as you write it, and exploring which types are you working with. In the vast majority of the cases, the compiler guess is correct. There are some cases where it cannot infer the type from your code's context. In that case, you will see some red wiggles underlining your variable, and a warning message:\n",
     "\n",
-    "<img src=\"../img/indeterminate_lookup.png\" alt=\"Indeterminate lookup\" width=\"600\"/>\n",
+    "<img src=\"../img/indeterminate_lookup.png\" alt=\"Indeterminate lookup\" width=\"800\"/>\n",
     "\n",
     "\n",
     "that says exactly that: the compiler does not know which type needs to assign to the troubled value.\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -208,7 +208,7 @@
    "source": [
     "A closer look at the function above leads us to another interesting notation. Hovering over `sum` we see:\n",
     "\n",
-    "<img src=\"../img/function_types.png\" alt=\"Function types\" width=\"400\"/>\n",
+    "<img src=\"../img/function_types.png\" alt=\"Function types\" width=\"300\"/>\n",
     "\n",
     "The compiler says us that the function `sum` is of type \n",
     "```fsharp\n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -228,7 +228,17 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "input.fsx (2,14)-(2,17) typecheck error The type 'float' does not match the type 'int'\ninput.fsx (2,12)-(2,13) typecheck error The type 'float' does not match the type 'int'",
+     "output_type": "error",
+     "traceback": [
+      "input.fsx (2,14)-(2,17) typecheck error The type 'float' does not match the type 'int'\n",
+      "input.fsx (2,12)-(2,13) typecheck error The type 'float' does not match the type 'int'"
+     ]
+    }
+   ],
    "source": [
     "let si = 2 + 3 \n",
     "let sf = 2 + 3.0 "
@@ -267,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -320,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -329,7 +339,16 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am printfn \n",
+      "and I do return unit: ()\n"
+     ]
+    }
+   ],
    "source": [
     "let q = printfn \"I am printfn \"\n",
     "printfn \"and I do return unit: %A\" q"
@@ -354,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
