Finishing for today

--- a/tools/CreatePosts.ipynb
+++ b/tools/CreatePosts.ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -226,12 +226,12 @@
     {
      "data": {
       "text/html": [
-       "<table><thead><tr><th><i>index</i></th><th>Id</th><th>Text</th><th>ExitCode</th><th>Error</th></tr></thead><tbody><tr><td>0</td><td><div class=\"dni-plaintext\"><pre>94980</pre></div></td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td><td><table><thead><tr><th>Value</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>[NbConvertApp] Converting notebook /Users/flavioc/Documents/Blog/en/Fundamentals.ipynb to markdown\n",
-       "[NbConvertApp] Writing 8641 bytes to /Users/flavioc/Web/fcolavecchia/_fsharp/Fundamentals.md</pre></div></td></tr></tbody></table></td></tr><tr><td>1</td><td><div class=\"dni-plaintext\"><pre>94982</pre></div></td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td><td><table><thead><tr><th>Value</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>[NbConvertApp] Converting notebook /Users/flavioc/Documents/Blog/en/Functions.ipynb to markdown\n",
-       "[NbConvertApp] Writing 12079 bytes to /Users/flavioc/Web/fcolavecchia/_fsharp/Functions.md</pre></div></td></tr></tbody></table></td></tr><tr><td>2</td><td><div class=\"dni-plaintext\"><pre>94989</pre></div></td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td><td><table><thead><tr><th>Value</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>[NbConvertApp] Converting notebook /Users/flavioc/Documents/Blog/en/IntroToTypes.ipynb to markdown\n",
-       "[NbConvertApp] Writing 13489 bytes to /Users/flavioc/Web/fcolavecchia/_fsharp/IntroToTypes.md</pre></div></td></tr></tbody></table></td></tr><tr><td>3</td><td><div class=\"dni-plaintext\"><pre>94992</pre></div></td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td><td><table><thead><tr><th>Value</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>[NbConvertApp] Converting notebook /Users/flavioc/Documents/Blog/en/DiscriminatedUnions.ipynb to markdown\n",
-       "[NbConvertApp] Writing 9704 bytes to /Users/flavioc/Web/fcolavecchia/_fsharp/DiscriminatedUnions.md</pre></div></td></tr></tbody></table></td></tr><tr><td>4</td><td><div class=\"dni-plaintext\"><pre>94995</pre></div></td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td><td><table><thead><tr><th>Value</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>[NbConvertApp] Converting notebook /Users/flavioc/Documents/Blog/en/Records.ipynb to markdown\n",
-       "[NbConvertApp] Writing 4954 bytes to /Users/flavioc/Web/fcolavecchia/_fsharp/Records.md</pre></div></td></tr></tbody></table></td></tr><tr><td>5</td><td><div class=\"dni-plaintext\"><pre>95000</pre></div></td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td><td><table><thead><tr><th>Value</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>[NbConvertApp] Converting notebook /Users/flavioc/Documents/Blog/en/TypeExercises.ipynb to markdown\n",
+       "<table><thead><tr><th><i>index</i></th><th>Id</th><th>Text</th><th>ExitCode</th><th>Error</th></tr></thead><tbody><tr><td>0</td><td><div class=\"dni-plaintext\"><pre>96363</pre></div></td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td><td><table><thead><tr><th>Value</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>[NbConvertApp] Converting notebook /Users/flavioc/Documents/Blog/en/Fundamentals.ipynb to markdown\n",
+       "[NbConvertApp] Writing 8720 bytes to /Users/flavioc/Web/fcolavecchia/_fsharp/Fundamentals.md</pre></div></td></tr></tbody></table></td></tr><tr><td>1</td><td><div class=\"dni-plaintext\"><pre>96366</pre></div></td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td><td><table><thead><tr><th>Value</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>[NbConvertApp] Converting notebook /Users/flavioc/Documents/Blog/en/Functions.ipynb to markdown\n",
+       "[NbConvertApp] Writing 12131 bytes to /Users/flavioc/Web/fcolavecchia/_fsharp/Functions.md</pre></div></td></tr></tbody></table></td></tr><tr><td>2</td><td><div class=\"dni-plaintext\"><pre>96371</pre></div></td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td><td><table><thead><tr><th>Value</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>[NbConvertApp] Converting notebook /Users/flavioc/Documents/Blog/en/IntroToTypes.ipynb to markdown\n",
+       "[NbConvertApp] Writing 13725 bytes to /Users/flavioc/Web/fcolavecchia/_fsharp/IntroToTypes.md</pre></div></td></tr></tbody></table></td></tr><tr><td>3</td><td><div class=\"dni-plaintext\"><pre>96372</pre></div></td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td><td><table><thead><tr><th>Value</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>[NbConvertApp] Converting notebook /Users/flavioc/Documents/Blog/en/DiscriminatedUnions.ipynb to markdown\n",
+       "[NbConvertApp] Writing 10062 bytes to /Users/flavioc/Web/fcolavecchia/_fsharp/DiscriminatedUnions.md</pre></div></td></tr></tbody></table></td></tr><tr><td>4</td><td><div class=\"dni-plaintext\"><pre>96373</pre></div></td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td><td><table><thead><tr><th>Value</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>[NbConvertApp] Converting notebook /Users/flavioc/Documents/Blog/en/Records.ipynb to markdown\n",
+       "[NbConvertApp] Writing 4927 bytes to /Users/flavioc/Web/fcolavecchia/_fsharp/Records.md</pre></div></td></tr></tbody></table></td></tr><tr><td>5</td><td><div class=\"dni-plaintext\"><pre>96378</pre></div></td><td><div class=\"dni-plaintext\"><pre>&lt;null&gt;</pre></div></td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td><td><table><thead><tr><th>Value</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>[NbConvertApp] Converting notebook /Users/flavioc/Documents/Blog/en/TypeExercises.ipynb to markdown\n",
        "[NbConvertApp] Writing 1986 bytes to /Users/flavioc/Web/fcolavecchia/_fsharp/TypeExercises.md</pre></div></td></tr></tbody></table></td></tr></tbody></table><style>\r\n",
        ".dni-code-hint {\r\n",
        "    font-style: italic;\r\n",
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 56,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -433,19 +433,15 @@
     "    let front = frontmatter title tagline \n",
     "    let newpost = [front] @ lines[firstline..]\n",
     "    let newFile = post.Replace(\".md\",\"_new.md\")\n",
+    "    File.Delete(newFile)\n",
     "    // printfn \"%A\" newFile\n",
     "    File.AppendAllLines(newFile, newpost)\n",
-    "    \n",
-    "    // printfn \"%A\" (newpost[0..20] |> String.Concat)\n",
-    "    // newpost\n",
-    "\n",
-    "// printfn \"%A\" posts\n",
-    "// createFrontMatter posts.[0]    "
+    "    File.Delete(post)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 57,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
