--- a/Solutions/TypeExercises.ipynb
+++ b/Solutions/TypeExercises.ipynb
@@ -2,7 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "## F\\# types exercises\n",
     "\n",
@@ -31,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "fsharp"
@@ -68,6 +75,144 @@
     "\n",
     "    (float dimes) * 0.1 + float (quarts) * 0.25 + float (halfs) * 0.5"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "fsharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "fsharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "input.fsx (93,22)-(93,34) typecheck error The 'if' expression needs to have type 'Semaphore4' to satisfy context type requirements. It currently has type 'Semaphore2'.\ninput.fsx (95,22)-(95,34) typecheck error The 'if' expression needs to have type 'Semaphore4' to satisfy context type requirements. It currently has type 'Semaphore2'.",
+     "output_type": "error",
+     "traceback": [
+      "input.fsx (93,22)-(93,34) typecheck error The 'if' expression needs to have type 'Semaphore4' to satisfy context type requirements. It currently has type 'Semaphore2'.\n",
+      "input.fsx (95,22)-(95,34) typecheck error The 'if' expression needs to have type 'Semaphore4' to satisfy context type requirements. It currently has type 'Semaphore2'."
+     ]
+    }
+   ],
+   "source": [
+    "[<Literal>]\n",
+    "let PI = 3.1415\n",
+    "\n",
+    "type Color =\n",
+    "| Red\n",
+    "| Green\n",
+    "| Blue\n",
+    "\n",
+    "type Rectangle =\n",
+    "    {\n",
+    "        A: float\n",
+    "        B: float \n",
+    "    }\n",
+    "\n",
+    "type Shape = \n",
+    "    | Circle of float\n",
+    "    | Rectangle of Rectangle\n",
+    "\n",
+    "let areaCircle r =\n",
+    "    r*r*PI \n",
+    "    \n",
+    "let areaRectangle a b = \n",
+    "    a * b    \n",
+    "\n",
+    "let area shape =\n",
+    "    match shape with\n",
+    "    | Circle r -> areaCircle r \n",
+    "    | Rectangle rect -> areaRectangle rect.A rect.B \n",
+    "\n",
+    "let isSquare shape = \n",
+    "    match shape with\n",
+    "    | Circle r -> false  \n",
+    "    | Rectangle rect -> rect.A = rect.B \n",
+    "\n",
+    "let scale shape percentage = \n",
+    "    match shape with\n",
+    "    | Circle r -> ()\n",
+    "    | Rectangle rect -> ()\n",
+    "\n",
+    "\n",
+    "type Semaphore =\n",
+    "    | Red\n",
+    "    | Yellow\n",
+    "    | Green \n",
+    "\n",
+    "type Time =\n",
+    "    | Time of int  \n",
+    "\n",
+    "type Semaphore2 = \n",
+    "    | Red of Time \n",
+    "    | Yellow of Time \n",
+    "    | Green of Time \n",
+    "\n",
+    "let RedDefault = Red (Time 45)\n",
+    "let YellowDefault = Yellow (Time 2)\n",
+    "let GreenDefault = Green (Time 66)\n",
+    "\n",
+    "\n",
+    "type YellowState =\n",
+    "    | ToGreen\n",
+    "    | ToRed \n",
+    "\n",
+    "let switch semaphore yellowState =\n",
+    "    match semaphore,yellowState with \n",
+    "    | Red (Time t), ys -> \n",
+    "        if t<=0 then YellowDefault else Red (Time t) \n",
+    "    | Yellow (Time t), ys -> \n",
+    "        if t<=0 then\n",
+    "            match ys with \n",
+    "            | ToGreen -> GreenDefault\n",
+    "            | ToRed -> RedDefault \n",
+    "        else \n",
+    "            Yellow (Time t) \n",
+    "    | Green (Time t), ys -> \n",
+    "        if t<=0 then YellowDefault else Green (Time t)        \n",
+    "\n",
+    "type Semaphore4 = \n",
+    "    | Red of Time \n",
+    "    | YellowFromRed of Time \n",
+    "    | YellowFromGreen of Time     \n",
+    "    | Green of Time \n",
+    "\n",
+    "let RedDefault4 = Red (Time 45)\n",
+    "let YellowFromRedDefault = YellowFromRed (Time 2)\n",
+    "let YellowFromGreenDefault = YellowFromGreen (Time 2)\n",
+    "let GreenDefault4 = Green (Time 66)\n",
+    "\n",
+    "let getTime semaphore4 = \n",
+    "    match semaphore4 with \n",
+    "    | Red (Time t) -> t\n",
+    "    | YellowFromRed (Time t) -> t \n",
+    "    | YellowFromGreen (Time t) -> t    \n",
+    "    | Green (Time t) -> t\n",
+    "\n",
+    "let switch4 (semaphore: Semaphore4) : Semaphore4 = \n",
+    "    match semaphore with \n",
+    "    | Red (Time t) -> \n",
+    "        if t<=0 then YellowFromRedDefault else Red (Time t) \n",
+    "    | YellowFromRed (Time t) -> \n",
+    "        if t<=0 then GreenDefault4 else YellowFromRed (Time t) \n",
+    "    | YellowFromGreen (Time t) -> \n",
+    "        if t<=0 then RedDefault4 else YellowFromRed (Time t)        \n",
+    "    | Green (Time t) -> \n",
+    "        if t<=0 then YellowFromGreenDefault else Green (Time t)        \n",
+    "\n",
+    "let testSwitch (Time t) nextSemaphore = \n",
+    "    let t = getTime semaphore \n",
+    "    if t<=0 then nextSemaphore else semaphore \n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -81,7 +226,11 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [],
+      "aliases": [
+       "c#",
+       "C#"
+      ],
+      "languageName": "C#",
       "name": "csharp"
      },
      {
@@ -90,6 +239,60 @@
       ],
       "languageName": null,
       "name": "vscode"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
+     },
+     {
+      "aliases": [],
+      "languageName": "KQL",
+      "name": "kql"
+     },
+     {
+      "aliases": [],
+      "name": ".NET"
+     },
+     {
+      "aliases": [
+       "f#",
+       "F#"
+      ],
+      "languageName": "F#",
+      "name": "fsharp"
+     },
+     {
+      "aliases": [],
+      "languageName": "HTML",
+      "name": "html"
+     },
+     {
+      "aliases": [],
+      "languageName": "Mermaid",
+      "name": "mermaid"
+     },
+     {
+      "aliases": [
+       "powershell"
+      ],
+      "languageName": "PowerShell",
+      "name": "pwsh"
+     },
+     {
+      "aliases": [],
+      "languageName": "SQL",
+      "name": "sql"
+     },
+     {
+      "aliases": [],
+      "name": "value"
      }
     ]
    }
